--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:EiZctjFDCgA=,iv:oI1lcyDljqqLmyrIXLpTeIcEE89IdMHQmrgeR5y7LdA=,tag:HfmRv4wXIGaJOTm9dnPncQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:yinBWHubazc5RSGURuk=,iv:j7hgnSTyX1jsCKXscP6a1mWtP36qHRxXw6qCQa7LUUs=,tag:NKkCS4R+7vX+5bxGVtvwRQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:d8J2f9HIeDSlyvWhJ/dZY3eCV1XmtHFEd/VmsVs4wlDUIn9V,iv:+9FGEKr0OzVh2JyKR+GB8OoYJWDHl1TWgrgSoRZu++g=,tag:O8Kdx1yYwHa7EOwy4tgf3Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:pO9foc4ADAY=,iv:qvuVndoA/ZiP7myiXzd8me93mleyLvMib72iNBSSy5A=,tag:8Jcz9PU8Wk7MlbOWiOp+bw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:fktuPOI4OeU1AWQXgWM=,iv:ohbj7FUDe5ujnNKOxLj3SLQCEeuQjTkiCggpFaEdw1o=,tag:M4XnNzm8rINICX8P6/WHow==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:3ZAs5/Vg4onmt1iEEV/WmU79uqQiXQEPdiaVH5VoMF8B0XfY,iv:4QxB6J7TRJzZFDvVwlJfeWuADPTncPuXucLrf2sWxhk=,tag:wajTL8jaIXUf5xxNtwa/AQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBcnp2VVZrUVpGRTNvYXNP
-            Zm5vQ296UjZoYzIrZUt2UHJYNmptcUV4ZEhzCkNhRDVOdUNoRFM2dlpCQjhGdThp
-            R0IvZUNyY1dRbWhlMGRTblNPWVhWazgKLS0tIHpPVXJrMjRjeE5wV3dZVldEUVlw
-            aHhaRjBwNUVidmh1dHhpeGxRbkt2QmMKi7se+YS0pNo2W4YdyPdcy9LR6tA+nczf
-            sxY0HtxiZ3U09ME+d+JTIK5scFX7MamcZA0lstaZu2AO3p/JmLsgEA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArR1RUejRTRSt1dTlVVHFC
+            WGZWNkNnYzRvNEFXZkZwMmhUZ3hERG5IdkVrCitOUU5SVS9LRytDRGtOZVZkQmRO
+            U2w2RVczMnBiNzVzREhIVWo2RFV3M2cKLS0tIGI5VjVsbUhla3dUdDlqM0d4L0Ns
+            VGhtU2s2TDJua3FZYjUrZk1BVlVRZ3MK1DSfZqi76nCBUmvIy+fFG4tNX2bUFh2A
+            pClm/bANm0ahu5P62JI19UDJHtOG8X0rSC1wsuc454bFDMoPnI0qEQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-15T06:11:20Z"
-    mac: ENC[AES256_GCM,data:CfKdiNEPVfJlj9FIcT2WZ89tTuxnIxlxU1ZT2CCxrUSJcc+eY9ZiTKKxYHjPXfn96nTLp0CJeWh/9ZFWPSt9EZ819ofiUX8n2OrBibapf+Nlot88+tnbIRXqGauoaxyA01qgoBa9lOzPmxiXd3/eCTCLeQtgEOXCM1qrP7Mc82Q=,iv:g9deepn82h4hVw6xjUf3zOX+pG+xGpgEp/XjuRhHsI0=,tag:zDv/NUQbi/ySXEPCwUBgmg==,type:str]
+    lastmodified: "2024-10-17T05:09:10Z"
+    mac: ENC[AES256_GCM,data:c0ikSU4s/pHj1X5x3tCe8I4aF5XdHF9Qh6EUgiY0AqehlyhMhc/ldnU4Nva8QK1i/rfCCb2l3qNCs897sMPmXJWMBEfsi1I+c53Tusc36wgACZwXsBm7FYyl/8okcrg1vlL2Enn2G6NkRLKFn4HvFI5/+x5c/WTY17yUpuFSCNw=,iv:9UtP4Axfr8OMLgzPznVMRdOSdKq8p9pMbOODIdmJbmg=,tag:F/Mg4rf0pJt9KGUoMNi6Iw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
