--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
     controller:
       service:
         annotations:
-          io.cilium/lb-ipam-ips: "192.168.20.12"
+          lbipam.cilium.io/ips: "192.168.20.12"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
