--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:pO9foc4ADAY=,iv:qvuVndoA/ZiP7myiXzd8me93mleyLvMib72iNBSSy5A=,tag:8Jcz9PU8Wk7MlbOWiOp+bw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:fktuPOI4OeU1AWQXgWM=,iv:ohbj7FUDe5ujnNKOxLj3SLQCEeuQjTkiCggpFaEdw1o=,tag:M4XnNzm8rINICX8P6/WHow==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:3ZAs5/Vg4onmt1iEEV/WmU79uqQiXQEPdiaVH5VoMF8B0XfY,iv:4QxB6J7TRJzZFDvVwlJfeWuADPTncPuXucLrf2sWxhk=,tag:wajTL8jaIXUf5xxNtwa/AQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:nIspGNqpaSY=,iv:A4dktfvo6AbmbKhiono7lQ47R7+hh0kvd2SXzna5HG0=,tag:YkPNwvMq6ZdZXQxuwC/JpA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:UQWoKUl1hFE4n63mdHw=,iv:RXwZhxSBqyGbexVUl/+gvOZEyxr3C5I9Ryjm0ksrtwo=,tag:isZJLV49ci6i16o0P4SYrg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:spkgtkyik5WF6YnZDkSW8DMqbNFwmavFgR134CxHoCPTdJWw,iv:TxEPrM7d3asvkU7P3oys5daRYy1Z+PEtApIshxcxHzs=,tag:6f1yvrfA7GLy7qdztFWXUg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArR1RUejRTRSt1dTlVVHFC
-            WGZWNkNnYzRvNEFXZkZwMmhUZ3hERG5IdkVrCitOUU5SVS9LRytDRGtOZVZkQmRO
-            U2w2RVczMnBiNzVzREhIVWo2RFV3M2cKLS0tIGI5VjVsbUhla3dUdDlqM0d4L0Ns
-            VGhtU2s2TDJua3FZYjUrZk1BVlVRZ3MK1DSfZqi76nCBUmvIy+fFG4tNX2bUFh2A
-            pClm/bANm0ahu5P62JI19UDJHtOG8X0rSC1wsuc454bFDMoPnI0qEQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSnFNajdwTjdHZHZwN2Iv
+            QXRNQXU0QmoxQWozZkhybFhFRjlqSC9NYVhZCkZyK3VnWmE1NEpHUzBRUXhJN1ZX
+            eTdLdzlXMW12RHBWOE01ZlVpWGxsdkkKLS0tIGtVZHd3eDhJdFFZcGorMzFCSXN2
+            bU5XcE5DSk5EYTlVREJjUS9wZ1Nwa1kKEsfhWPIlR2T4iJ0gJIc/cFVCSrfVx0E5
+            f8YLOevd8wKynX2z403UIY0RylyPCgx73S64gZUIb78ht3Tl6J0rmg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-17T05:09:10Z"
-    mac: ENC[AES256_GCM,data:c0ikSU4s/pHj1X5x3tCe8I4aF5XdHF9Qh6EUgiY0AqehlyhMhc/ldnU4Nva8QK1i/rfCCb2l3qNCs897sMPmXJWMBEfsi1I+c53Tusc36wgACZwXsBm7FYyl/8okcrg1vlL2Enn2G6NkRLKFn4HvFI5/+x5c/WTY17yUpuFSCNw=,iv:9UtP4Axfr8OMLgzPznVMRdOSdKq8p9pMbOODIdmJbmg=,tag:F/Mg4rf0pJt9KGUoMNi6Iw==,type:str]
+    lastmodified: "2024-10-18T01:44:03Z"
+    mac: ENC[AES256_GCM,data:Ha867pThADNsdqjFlgE2e0sKpw+E4/fHWOeSbzBDjw1b8Cf3KvUwEV8qA/iYZm9w2YqnDgmjGNrkWRjS3QXXR6496lwi140pD3CNpa9TmOJbgWKcsj49ytjg7mpSrdKzdeOTf/l75d81Gytg5H58ttEwg0aVmvRM/L9y+n2iahY=,iv:x7oJyk5kEJiBroNtFUQsY6otsLXKZAyWjCAJnP8LAVc=,tag:VlKR0oY1QKT7Wwjnk9qijw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
