config: rotate tailscale auth-key

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:nIspGNqpaSY=,iv:A4dktfvo6AbmbKhiono7lQ47R7+hh0kvd2SXzna5HG0=,tag:YkPNwvMq6ZdZXQxuwC/JpA==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:UQWoKUl1hFE4n63mdHw=,iv:RXwZhxSBqyGbexVUl/+gvOZEyxr3C5I9Ryjm0ksrtwo=,tag:isZJLV49ci6i16o0P4SYrg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:spkgtkyik5WF6YnZDkSW8DMqbNFwmavFgR134CxHoCPTdJWw,iv:TxEPrM7d3asvkU7P3oys5daRYy1Z+PEtApIshxcxHzs=,tag:6f1yvrfA7GLy7qdztFWXUg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:uMN9sGhrABk=,iv:x+KHHd/ssrFUZNJOPhG1yYiZZ2S1W3nluMgljjkH2lw=,tag:tdilMgshbCI/bxH7TrhYaw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:tpzdY9/0mBxGyN7Z01E=,iv:ahfv06R4h+3lA1aGeU32Ev74bmF8cTyOKoj5k7gA3T8=,tag:0chbRbcOxX9R60olurm9OA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:il3WwALI93NxW+nvxPa6f8md/2z1a91um6Yb3tRaasb6ixPS,iv:0P3MnZAYhlhPfO0WKxHM5H2R+KOL7ofnp3w/EVgfWuo=,tag:YHVxfAQ8qrWEq9RtkzYpcw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSnFNajdwTjdHZHZwN2Iv
-            QXRNQXU0QmoxQWozZkhybFhFRjlqSC9NYVhZCkZyK3VnWmE1NEpHUzBRUXhJN1ZX
-            eTdLdzlXMW12RHBWOE01ZlVpWGxsdkkKLS0tIGtVZHd3eDhJdFFZcGorMzFCSXN2
-            bU5XcE5DSk5EYTlVREJjUS9wZ1Nwa1kKEsfhWPIlR2T4iJ0gJIc/cFVCSrfVx0E5
-            f8YLOevd8wKynX2z403UIY0RylyPCgx73S64gZUIb78ht3Tl6J0rmg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIbmdOMXVFRzlXZitmc2Nj
+            WFdqTUkxQWJXVjVuUGl1U0tpcDNZNzMzVEVJCjRsRmVqb3kxZlFBNko3TFBCK2kz
+            ZnUwbzdibWF0STVXZEFMeDJIK09qN0kKLS0tIGRHbzAxVG53cXAxdTNwTkQwdXI2
+            YWlzdTRNcmE5RHBYM1N0eTBXdlo1VW8KJGQrbMq5qBTtBlvMDshBgEBHyEKxqWQd
+            adNdGuYWoLs3T6dlDbUdvWs0ChfRdkehVsGSHUQlRiLj/8uHMnTrhQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-18T01:44:03Z"
-    mac: ENC[AES256_GCM,data:Ha867pThADNsdqjFlgE2e0sKpw+E4/fHWOeSbzBDjw1b8Cf3KvUwEV8qA/iYZm9w2YqnDgmjGNrkWRjS3QXXR6496lwi140pD3CNpa9TmOJbgWKcsj49ytjg7mpSrdKzdeOTf/l75d81Gytg5H58ttEwg0aVmvRM/L9y+n2iahY=,iv:x7oJyk5kEJiBroNtFUQsY6otsLXKZAyWjCAJnP8LAVc=,tag:VlKR0oY1QKT7Wwjnk9qijw==,type:str]
+    lastmodified: "2024-10-25T03:19:42Z"
+    mac: ENC[AES256_GCM,data:fXKjQhkd5QB2LW6DxEt6EP8sCEkJ3P/Qf6cOj9F8+KwcIH0ry3O+uJSl9cmR7C71Lkf9PwQHZMZJOCeOM85TPzd0b1Lq4hyFUnfPjmTuj6v8OGWM88vFgLDkcgmU/n32MUDyfqBRnAYJf2RMn+SiNWbiRDwX7JYPg7JXGdoNB2c=,iv:DyRbmu0OPFxtegOHqzAGCXHlaV5qoYwALChNGNHwLLA=,tag:M4ntSIbaq7do+m8ds2CRzg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
