--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:uMN9sGhrABk=,iv:x+KHHd/ssrFUZNJOPhG1yYiZZ2S1W3nluMgljjkH2lw=,tag:tdilMgshbCI/bxH7TrhYaw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:tpzdY9/0mBxGyN7Z01E=,iv:ahfv06R4h+3lA1aGeU32Ev74bmF8cTyOKoj5k7gA3T8=,tag:0chbRbcOxX9R60olurm9OA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:il3WwALI93NxW+nvxPa6f8md/2z1a91um6Yb3tRaasb6ixPS,iv:0P3MnZAYhlhPfO0WKxHM5H2R+KOL7ofnp3w/EVgfWuo=,tag:YHVxfAQ8qrWEq9RtkzYpcw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:JfJA/ezrtR4=,iv:+OFhRbxyGTkrKHKdcp7NC95jntVET9lyYXuC9VD7JO4=,tag:gxnavrvlDoZbUuZZRhngtw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:EymhC6z6lZNDfUpA11U=,iv:6MiYlk5TgaFX1czSudEpPKXEBzcv7Zg5H4dv2AVQm+Q=,tag:aNEFm+cccd0pYQoHFYbEEQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:MtYL8w8htiSR57bVBe8d/7/R+Y/zeJklY6dleiuz93487oFX,iv:IRPbesig8HXPQWCz5I0Uut4toGRJlVT0cZDALIeXql0=,tag:9TXuiKVMK+paVzsXLCG8sw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIbmdOMXVFRzlXZitmc2Nj
-            WFdqTUkxQWJXVjVuUGl1U0tpcDNZNzMzVEVJCjRsRmVqb3kxZlFBNko3TFBCK2kz
-            ZnUwbzdibWF0STVXZEFMeDJIK09qN0kKLS0tIGRHbzAxVG53cXAxdTNwTkQwdXI2
-            YWlzdTRNcmE5RHBYM1N0eTBXdlo1VW8KJGQrbMq5qBTtBlvMDshBgEBHyEKxqWQd
-            adNdGuYWoLs3T6dlDbUdvWs0ChfRdkehVsGSHUQlRiLj/8uHMnTrhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtOW0wTHNlRVkwMmF1QS9u
+            b200UjZ6QUtrOWdyZk1kWE9KOUdFcDZxVTBNClhpWUhPMnZYNE5wcHhBQjhvSXox
+            akpCRUhnQnQraExueEJvbGJucU1WdzQKLS0tIHVXa1Z1TXZyZktqT0NXSWg2WStr
+            VndQbUhCU1hSQXlLTmkxVExQMkpGL2cKotBxBetvrt5ThOkWB2IbicNJfvjFOOuA
+            EvvjRnQMZM/JdXTrylOVr9+GXXNXAzOZ2Iv9ThsbBs/92v9KOvnHXQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-25T03:19:42Z"
-    mac: ENC[AES256_GCM,data:fXKjQhkd5QB2LW6DxEt6EP8sCEkJ3P/Qf6cOj9F8+KwcIH0ry3O+uJSl9cmR7C71Lkf9PwQHZMZJOCeOM85TPzd0b1Lq4hyFUnfPjmTuj6v8OGWM88vFgLDkcgmU/n32MUDyfqBRnAYJf2RMn+SiNWbiRDwX7JYPg7JXGdoNB2c=,iv:DyRbmu0OPFxtegOHqzAGCXHlaV5qoYwALChNGNHwLLA=,tag:M4ntSIbaq7do+m8ds2CRzg==,type:str]
+    lastmodified: "2024-11-05T01:51:41Z"
+    mac: ENC[AES256_GCM,data:K2AzFMnUZwxXbyZ4QfX/gAQnap14aScWy7UXoOldMpInCEm4fcb2LrroocyMhzqBYV4ytjDPmjgIuMTQ12j976tZHR4rodO8UMdsanJKNZw/+9yYM+fkapZK76aU5lApeYiCsCgzR6PJ+T1nrllTj1ud3KP2rwZO2kJcoFBbTac=,iv:rv9Z4Hc/h7Nbt+qWKqSSaxpS2hxh+eAUpQVSDKF/mqU=,tag:EKEbA4WJh9a6UlpoYMw5ng==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
