--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:JfJA/ezrtR4=,iv:+OFhRbxyGTkrKHKdcp7NC95jntVET9lyYXuC9VD7JO4=,tag:gxnavrvlDoZbUuZZRhngtw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:EymhC6z6lZNDfUpA11U=,iv:6MiYlk5TgaFX1czSudEpPKXEBzcv7Zg5H4dv2AVQm+Q=,tag:aNEFm+cccd0pYQoHFYbEEQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:MtYL8w8htiSR57bVBe8d/7/R+Y/zeJklY6dleiuz93487oFX,iv:IRPbesig8HXPQWCz5I0Uut4toGRJlVT0cZDALIeXql0=,tag:9TXuiKVMK+paVzsXLCG8sw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:+z1dHxu19Wc=,iv:Twul5fRceUofiF799KJVI5JRvTMAWSy7Vhtg3UoGinc=,tag:FR3by2sxf2CQ0WvJAxIEPA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:e8OhnS1Fpo68H0NEUbY=,iv:U0E0PrIQw8uaqPl/cAuqYmqpyq7ktoJxbcXfhgtpJ0Y=,tag:i6bhjdkTgkgjJ6uKvFiVOA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:zyxoTbtycE7pDVxY1o3G3eWUJo+LHSocENE0VOME4nNM7PT2,iv:JIT0xR936KtiO4bGM1JyyaK3yxUPE1ELuhrcx3qeKsM=,tag:JXajAd2hlRShLDcvcUK4TQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtOW0wTHNlRVkwMmF1QS9u
-            b200UjZ6QUtrOWdyZk1kWE9KOUdFcDZxVTBNClhpWUhPMnZYNE5wcHhBQjhvSXox
-            akpCRUhnQnQraExueEJvbGJucU1WdzQKLS0tIHVXa1Z1TXZyZktqT0NXSWg2WStr
-            VndQbUhCU1hSQXlLTmkxVExQMkpGL2cKotBxBetvrt5ThOkWB2IbicNJfvjFOOuA
-            EvvjRnQMZM/JdXTrylOVr9+GXXNXAzOZ2Iv9ThsbBs/92v9KOvnHXQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkYU9iZTR5Qk0yVDVrb0Zy
+            WkJWZDNjUVlTNFZkQzRsMDAzTE81Szl3SlVZCmxxMG56MVRBUUlSUEdqUXRzYWdz
+            WjVqQU9UWUNSd0ZycjY0d0NjaUtVR00KLS0tIGxreEtiOTlXYnpDc1hHQ0VEVWc5
+            N1Y2a0J6S1BoclVwTWk5bmxEOUpZWjgK6UupdIRJ9K5G1xMt6yD2mLz7C5lllITE
+            MdgDnxGsDH1PKWayqfalJGC/fM7tqEt8Th8poTWRnEIQrjhiv6068A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-05T01:51:41Z"
-    mac: ENC[AES256_GCM,data:K2AzFMnUZwxXbyZ4QfX/gAQnap14aScWy7UXoOldMpInCEm4fcb2LrroocyMhzqBYV4ytjDPmjgIuMTQ12j976tZHR4rodO8UMdsanJKNZw/+9yYM+fkapZK76aU5lApeYiCsCgzR6PJ+T1nrllTj1ud3KP2rwZO2kJcoFBbTac=,iv:rv9Z4Hc/h7Nbt+qWKqSSaxpS2hxh+eAUpQVSDKF/mqU=,tag:EKEbA4WJh9a6UlpoYMw5ng==,type:str]
+    lastmodified: "2024-12-20T04:35:29Z"
+    mac: ENC[AES256_GCM,data:WzrwxdVXli77cfDZBc0d9SDQnD2ypp++uY2um2+92zV79waWeXnwDXl9o7OKy5TVBengKC8CclFo1poI/ZExEYsinAJbp5RomUUFqwLfbbdevNgi2eO+1qH9pOJHgVOWxceMlHkumnNopDbIaO/015dHai6SXKdFsTu0C0l+Alo=,iv:SNThh8NgfhLtNif/hy9FuPSrwe8nkq3y+p/E6IklsEY=,tag:VK6cFWvRKDBRpR/awKEl9A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.1
+    version: 3.9.2
