task updates + upstream changes

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -23,8 +23,6 @@ tasks:
       - talhelper gencommand apply --config-file {{.TALHELPER_CONFIG_FILE}} --out-dir {{.TALHELPER_CLUSTER_DIR}} --extra-flags="--insecure" | bash
       - until talhelper gencommand bootstrap --config-file {{.TALHELPER_CONFIG_FILE}} --out-dir {{.TALHELPER_CLUSTER_DIR}} | bash; do sleep 10; done
       - until talhelper gencommand kubeconfig --config-file {{.TALHELPER_CONFIG_FILE}} --out-dir {{.TALHELPER_CLUSTER_DIR}} --extra-flags="{{.ROOT_DIR}} --force" | bash; do sleep 10; done
-      - task: apps
-      - talosctl health --server=false
     vars:
       TALHELPER_SECRET_EXISTS:
         sh: test -f {{.TALHELPER_SECRET_FILE}} && echo true || echo false
@@ -33,6 +31,18 @@ tasks:
       - test -f {{.SOPS_AGE_KEY_FILE}}
       - test -f {{.TALHELPER_CONFIG_FILE}}
       - which talhelper sops
+
+  apps:
+    desc: Bootstrap essential apps into the Talos cluster
+    dir: '{{.KUBERNETES_DIR}}/bootstrap/talos'
+    cmds:
+      - until kubectl wait --for=condition=Ready=False nodes --all --timeout=600s; do sleep 10; done
+      - helmfile --file {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml apply --skip-diff-on-install --suppress-diff
+      - until kubectl wait --for=condition=Ready nodes --all --timeout=600s; do sleep 10; done
+    preconditions:
+      - test -f {{.KUBECONFIG}}
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml
+      - which helmfile kubectl talosctl
 
   flux:
     desc: Bootstrap Flux into the Talos cluster
@@ -54,18 +64,6 @@ tasks:
       - test -f {{.SOPS_AGE_KEY_FILE}}
       - which flux kubectl sops
 
-  apps:
-    internal: true
-    dir: '{{.KUBERNETES_DIR}}/bootstrap/talos'
-    cmds:
-      - until kubectl wait --for=condition=Ready=False nodes --all --timeout=600s; do sleep 10; done
-      - helmfile --file {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml apply --skip-diff-on-install --suppress-diff
-      - until kubectl wait --for=condition=Ready nodes --all --timeout=600s; do sleep 10; done
-    preconditions:
-      - test -f {{.KUBECONFIG}}
-      - test -f {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml
-      - which helmfile kubectl
-
   age-keygen:
     desc: Bootstrap the Sops Age key
     cmd: age-keygen --output {{.SOPS_AGE_KEY_FILE}}
@@ -76,12 +74,12 @@ tasks:
 
   template:
     internal: true
-    cmd: '{{.VIRTUAL_ENV}}/bin/makejinja'
+    cmd: makejinja
     preconditions:
-      - test -d {{.VIRTUAL_ENV}}
       - test -f {{.BOOTSTRAP_CONFIG_FILE}}
       - test -f {{.BOOTSTRAP_DIR}}/scripts/plugin.py
       - test -f {{.MAKEJINJA_CONFIG_FILE}}
+      - which makejinja
 
   secrets:
     internal: true
@@ -102,21 +100,18 @@ tasks:
   clean:
     desc: Clean files and directories no longer needed after cluster bootstrap
     cmds:
-      # Create backup directory
-      - mkdir -p {{.ROOT_DIR}}/.private
-      # Clean up CI
+      - mkdir -p {{.ROOT_DIR}}/.private/{{.TS}}
+      - mv {{.BOOTSTRAP_DIR}} {{.ROOT_DIR}}/.private/{{.TS}}/bootstrap
+      - mv {{.MAKEJINJA_CONFIG_FILE}} {{.ROOT_DIR}}/.private/{{.TS}}/makejinja.toml
+      - mv {{.ROOT_DIR}}/requirements.txt {{.ROOT_DIR}}/.private/{{.TS}}/requirements.txt
       - rm -rf {{.ROOT_DIR}}/.github/tests
       - rm -rf {{.ROOT_DIR}}/.github/workflows/e2e.yaml
-      # Clean up devcontainer
-      - rm -rf {{.ROOT_DIR}}/.devcontainer/ci
-      - rm -rf {{.ROOT_DIR}}/.github/workflows/devcontainer.yaml
-      # Move bootstrap directory to gitignored directory
-      - mv {{.BOOTSTRAP_DIR}} {{.ROOT_DIR}}/.private/bootstrap-{{.TS}}
-      - mv {{.MAKEJINJA_CONFIG_FILE}} {{.ROOT_DIR}}/.private/makejinja-{{.TS}}.toml
-      # Update renovate.json5
       - sed -i {{if eq OS "darwin"}}''{{end}} 's/(..\.j2)\?//g' {{.ROOT_DIR}}/.github/renovate.json5
     vars:
       TS: '{{now | unixEpoch}}'
     preconditions:
       - test -d {{.BOOTSTRAP_DIR}}
+      - test -d {{.ROOT_DIR}}/.github/tests
+      - test -f {{.MAKEJINJA_CONFIG_FILE}}
       - test -f {{.ROOT_DIR}}/.github/renovate.json5
+      - test -f {{.ROOT_DIR}}/requirements.txt
