--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -7,6 +7,7 @@ shopt: [globstar]
 
 vars:
   KUBERNETES_DIR: '{{.ROOT_DIR}}/kubernetes'
+  PRIVATE_DIR: '{{.ROOT_DIR}}/.private'
   SOPS_CONFIG_FILE: '{{.ROOT_DIR}}/.sops.yaml'
 
 env:
