--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -51,7 +51,7 @@ nodes:
           - TS_ROUTES=10.96.0.0/12
   - hostname: "mba-node-01"
     ipAddress: "192.168.20.126"
-    installDisk: "/dev/sdc"
+    installDisk: "/dev/sdb"
     machineSpec:
       secureboot: false
     talosImageURL: factory.talos.dev/installer/6e810eb45767cfabcdb7a45e389eee803045af7a9467faebde5c91164861883a
