--- a/kubernetes/apps/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/apps/external-secrets/onepassword/ks.yaml
@@ -32,7 +32,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: onepassword
-      namespace: external-secrets
+      namespace: flux-system
   interval: 30m
   path: ./kubernetes/apps/external-secrets/onepassword/store
   prune: true
