--- a/kubernetes/flux/meta/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/meta/settings/cluster-secrets.sops.yaml
@@ -5,9 +5,9 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:EzYMS0h9fSA=,iv:Wa0JCnOJEccLUUXacDjekBHF6pmNGDACoTlESceLZEE=,tag:25TFVaZbO26YZfKvWnyghA==,type:str]
-  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:k258qU/2UsBuNg0dedI=,iv:Z+Y+x+soWhQHeTF+B4xonH4Io0aJYy174D5pkdFHu38=,tag:A0shcSA2ab9byQxTslYakg==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:DxhWGSkUoFfww7gs+xm54bNSGJQFqujQ5FUHLDTPocWLgkFg,iv:C9+9W9TR2mUC3oLbglvSvh5gHHaGhDeNbNhwK8FXrh0=,tag:zcVUb5tn/rCii74fpbX2Og==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:FaP82Zuy3Mw=,iv:EJWjLj68M6BqOTSWrwwT2+CLufGV3t8jBhTUwvE2Tpg=,tag:CjV/RXVFDqMGqDS/HKf+QA==,type:str]
+  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:CEMUruyUygJc3AUlXEQ=,iv:BTwmvetmxiRW3DhZ6NbDGbHIqH9LYCRruXBZ8PX/Tm4=,tag:pfdCwxsP0vfU5+VTPwwqUw==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:oEEJdFQ3l6s/LoG17jTr5KgSBcD4PKWVuEA50SDTpddllG4Q,iv:T5vg4+II9qbBxExDccKcARjXJLhd36bUKC+4f+cBSO8=,tag:S6tdw9a64WD2kKu+C0DvjA==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -17,14 +17,14 @@ sops:
     - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKVktZa3ZJUXR4MTlsT2Nz
-        SmhTMUNRUnRicWFpbk5tNGJ0TlJtSGY5eUNRClovbUF5b0gvWG9GRkZobldKSCta
-        S09VMEhiZjhIOEk0T2F5dGZPSGEySnMKLS0tIFdNYnhGSDFncTNldmFVV3FOUy91
-        VGgzcmsxTlROYTR5cEhJeG9Nbk9wSk0Kx7rE0aLUYsyEkHFROxWEUH4t5cT/mLYp
-        Xhoc4wiyphyFIS3fzIZRgFwq9p19uFCWIjDulsfyo8dlH8UROMoGMw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtZFl5U3NWRHowcVl3Q2o0
+        bXdjMlcxQ2QxWS9sd2lIdkZQT0lHb1VRRW5vCmI3SC9DZzB2bVp2SjRKRDY2OFU4
+        VFhobkVNUEZhYXNyYi9OSFZ4ZDV0ZFEKLS0tIDMrcFZqeU0zZkJOT2ZBUEZXWXNZ
+        bWRnMjdPNXlRMXpTWTlrMkgvWXE4L1kKxQbj+VEAW2IwYqJKlzJXNPBYbXPMgNnh
+        m5kPxo10fZuiQzXSQcVCNYwPU98mnXC+57vGJqrMoxfoIkGd5hTh9Q==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-01-15T04:50:43Z"
-  mac: ENC[AES256_GCM,data:2br7p7wKSdCeLf5cYGu02eoaL6juDddEzTia1Z4iqWGi+yBNRk8XsYW8Ud4ilP1Ll4TusTm2hMuXknSfcQToaAWIxJF4JGOXMZZu0RsnpyXRAgGzkyx5rw1ttnRcrQV8sunxdX2g3fZReR+OSKfizJQLSMOuZZsOvGiHIaL/BoU=,iv:RXjTO0Qsi8QickMYeYQeiq5WmYM30azynIYV63e3J3Y=,tag:763vEMsqnUK+jt/g3BHsDw==,type:str]
+  lastmodified: "2025-01-29T15:52:32Z"
+  mac: ENC[AES256_GCM,data:k2XzzKMOt3uyVQswqsX7l1VEhuQShkEBdi0L5yMtiZw7edBvOfjDmy9KeBQirBEydYnrbJWY3P8VxccXO1ZUopMNAocTxVrJoLuOGT/ftKAXZjxxL7FFRIpizktn/02m2PsVS0TkixjzsMYmuZemcsgloKYMXipoROTi+lF8NwI=,iv:vvs+TgUqXGpfdX5kki1efVbNl6/eMesMTaX0izJzEn4=,tag:spzGzAEdYSoww+B54/j+/A==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
