--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,10 +18,16 @@ env:
 
 includes:
   bootstrap: .taskfiles/bootstrap
-  kubernetes: .taskfiles/kubernetes
   talos: .taskfiles/talos
   utils: .taskfiles/utils
 
 tasks:
 
   default: task --list
+
+  reconcile:
+    desc: Force Flux to pull in changes from your Git repository
+    cmd: flux --namespace flux-system reconcile kustomization flux-system --with-source
+    preconditions:
+      - test -f {{.KUBECONFIG}}
+      - which flux
