--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -11,8 +11,8 @@ repositories:
   - name: cilium
     url: https://helm.cilium.io
 
-  - name: coredns
-    url: https://coredns.github.io/helm
+  - name: jetstack
+    url: https://charts.jetstack.io
 
 releases:
   - name: prometheus-operator-crds
@@ -31,12 +31,21 @@ releases:
 
   - name: coredns
     namespace: kube-system
-    chart: coredns/coredns
-    version: 1.38.1
+    chart: oci://ghcr.io/coredns/charts/coredns
+    version: 1.39.0
     values:
       - ../apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
+
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.16.3
+    values:
+      - ../apps/cert-manager/cert-manager/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
 
   - name: external-secrets
     namespace: external-secrets
@@ -54,7 +63,7 @@ releases:
     values:
       - ../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
-      - kube-system/coredns
+      - cert-manager/cert-manager
 
   - name: flux-instance
     namespace: flux-system
