--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -22,7 +22,7 @@ env:
 jobs:
   sync:
     name: Helm Repository Sync
-    runs-on: ubuntu-latest
+    runs-on: ["home-ops-runner"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
