--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -69,12 +69,21 @@ spec:
         connections:
           requireMsgr2: true
       storage:
-        useAllNodes: true
+        useAllNodes: false
         useAllDevices: false
-        # TODO: change this
-        devicePathFilter: /dev/disk/by-id/nvme-Micron_7450_MTFDKBA800TFS_.*
+        # devicePathFilter: ^/dev/sd[b-d]
         config:
           osdsPerDevice: "1"
+        nodes:
+          - name: "mbp-node-01"
+            devices:
+              - name: "/dev/sdb"
+              - name: "/dev/sdc"
+              - name: "/dev/sdd"
+          - name: "mba-node-01"
+            devices:
+              - name: "/dev/sdc"
+              - name: "/dev/sdd"
     cephBlockPools:
       - name: ceph-blockpool
         spec:
